Fix multiples Sonar issues (#28)